syntax = "proto3";

option go_package = "./proto";

package proto;

import "proto/dbsyncer.proto";

// Checkpoint is a verifiable point in the canonical history.
message Checkpoint {
  HLCTimestamp hlc = 1;
  string commit_hash = 2;
}

message BundleRequest {
  int32 max_commits = 1;
  int64 max_bytes = 2;
  bool allow_partial = 3;
  bool include_diagnostics = 4;
}

message BundleHeader {
  Checkpoint base = 1;

  HLCTimestamp provider_head_hlc = 2;
  string provider_head_hash = 3;

  bool base_mismatch = 4;
  repeated Checkpoint provider_checkpoints = 5;
}

message BundledCommit {
  HLCTimestamp hlc = 1;
  string commit_hash = 2;
  bytes metadata_json = 3;
  bytes metadata_sig = 4;
}

message BundledChunk {
  bytes hash = 1;
  bytes data = 2;
  uint32 codec = 3; // 0=raw, 1=nbs-compressed
}

message GetBundleSinceRequest {
  // Bundle is returned for commits strictly after base.hlc.
  Checkpoint base = 1;
  BundleRequest req = 2;
}

message GetBundleSinceChunk {
  oneof item {
    BundleHeader header = 1;
    BundledCommit commit = 2;
    BundledChunk chunk = 3;
  }
}

service BundleExchange {
  rpc GetBundleSince(GetBundleSinceRequest) returns (stream GetBundleSinceChunk);
}
